# pamc

./: .clang-format  .gitignore  CMakeLists.txt  DIAGRAM.txt  README.md  STYLE.md
.github/workflows/: cmake.yml  main.yml
examples/: run_3D_EA.cpp  run_ising.cpp
include/: Genealogy.hpp  MemoryBlock.hpp  MemoryPool.hpp  Model.hpp  Population.hpp  SharedModelData.hpp
include/models/: EAModel3DHelpers.hpp  Ising3DHelpers.hpp  IsingModel.hpp  Model.hpp  TestModel.hpp
include/pamc/: Population.hpp
src/: Population.cpp
src/models/: EAModel3DHelpers.cpp  Ising3DHelpers.cpp  IsingModel.cpp  TestModel.cpp
src/pamc/: Population.cpp
tests/: Test_MemoryPool.cpp  Test_Population.cpp  Test_Population_IsingModel.cpp  Test_Population_IsingModel_Pool.cpp  Test_Population_TestModel.cpp
tests/models/: IsingModelTest.cpp  TestModelTest.cpp  Test_IsingModel.cpp  Test_IsingModelPool.cpp
tests/pamc/: PopulationTest.cpp
validation/: binder_validation.py
validation/EA_model/: EA_validation.py
validation/EA_model/EA_realizations/L6/: EA_L6_ground_state.txt  EA_L6_stats.json
validation/Ising_model/: binder_validation.py
